tests/baselines/reference/typeOfOnTypeArg.errors.txt
tests/cases/compiler/typeOfOnTypeArg.ts(7,6): error TS2345: Argument of type 'number' is not assignable to parameter of type '{ '': number; }'.
  Property '''' is missing in type 'Number'.


==== tests/cases/compiler/typeOfOnTypeArg.ts (1 errors) ====
    var A = { '': 3 };
    
    function fill<B extends typeof A>(f: B) {
    
    } 
    
    fill(32);
         ~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type '{ '': number; }'.
!!! error TS2345:   Property '''' is missing in type 'Number'.
    